# fasttextembed

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  corpus.txt  model.fte
.github/workflows/: build-wheels.yml  release.yml
bindings/go/: README.md  csrc.c  embed_test.go  fasttextembed.go  go.mod
bindings/go/csrc/include/fte/: fte.h
bindings/go/csrc/src/: api.c  config.h  fp16.h  layer_matmul_names.c  loader.c  pack.c  tensor.c
bindings/go/csrc/src/tokenizer/: tokenizer.h
bindings/js/: README.md  build.sh  index.js  model.js  native.js  package.json  test.js  wasm.js
bindings/js/csrc/src/: fte_format.h  loader.h  pack.h  tensor.h  threadpool.c  threadpool.h
bindings/js/csrc/src/kernels/: kernels.h  kernels_scalar.c
bindings/js/csrc/src/tokenizer/: tokenizer.c
bindings/js/native/: addon.c  binding.gyp
bindings/python/: CMakeLists.txt  README.md  pyproject.toml  vendor.sh
bindings/python/src/fasttextembed/: __init__.py
bindings/rust/: Cargo.toml  README.md  build.rs  vendor.sh
bindings/rust/examples/: embed.rs
bindings/rust/src/: lib.rs
cli/: main.c
docs/superpowers/plans/: 2026-06-02-fasttextembed-fp32-milestone.md
docs/superpowers/specs/: 2026-06-02-fasttextembed-design.md
src/: model_bert.c  model_bert.h
tests/: test_e2e.c  test_kernels.c  test_tokenizer.c
tests/data/: golden_docs.txt  golden_meta.txt  golden_tokens.json  golden_tokens.txt  golden_vecs.f32
tools/: bench.py  bench_all.py  convert.py  plot_results.py
