[package]
name = "fasttextembed"
version = "1.0.0"
edition = "2021"
description = "Fast, dependency-free text embeddings (BAAI/bge-small-en-v1.5) in pure C"
license = "MIT"
authors = ["Cemsina Guzel"]
repository = "https://github.com/cemsina/fasttextembed"
keywords = ["embeddings", "bge", "nlp", "vector-search"]
categories = ["science", "text-processing"]
# Ship the vendored C engine (./csrc, from vendor.sh) so the crate builds from crates.io.
# `include` overrides .gitignore for packaging.
include = ["src/**/*", "build.rs", "csrc/**/*", "examples/**/*", "README.md", "Cargo.toml"]

[build-dependencies]
cc = "1.0"

# No runtime crate dependencies — the engine is C, the model downloads on first use (via curl).
[dependencies]
